script updates